name:                pure-locker
version:             0.8.0.0
synopsis:            Shared resource management
homepage:            purehs.org/doc/pure-locker
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Concurrency
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-locker.git

library
  exposed-modules:
    Pure.Locker
  build-depends:       
    base,
    stm,
    containers,
    exceptions,
    mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
